<resources>
    <string name="app_name">微脉</string>
    <string name="app_version">V1.0.0</string>
    <string name="app_description">数字商城应用</string>
    <string name="label_select_function_activity">功能选择界面</string>
    <string name="label_wallet_record">钱包流水记录</string>
    <string name="label_take_in_currency">转入数字资产</string>
    <string name="label_take_in_currency_detail">转入</string>
    <string name="label_take_in_currency_record">转入记录</string>
    <string name="label_take_in_record_detail">转入详情</string>
    <string name="label_bunkers_currency">燃料</string>
    <string name="label_bunkers_consume_record">ACC消耗记录</string>
    <string name="label_bunkers_consume_declare">燃料使用细则</string>
    <string name="label_take_out_currency">转出数字资产</string>
    <string name="label_take_out_platform">转出</string>
    <string name="label_take_out_friend">转账</string>
    <string name="label_confirm_order">确认订单</string>
    <string name="label_limit_panic_buy">限时抢购</string>
    <string name="label_pre_sell_news">新闻</string>
    <string name="label_pre_sell_record">预购记录</string>
    <string name="label_adopt">领养庄园</string>
    <string name="label_confirm_adopt_order">确认领养</string>
    <string name="label_confirm_exercise_order">确认订单</string>
    <string name="label_adopt_base">1号基地</string>
    <string name="label_exercise">行权中心</string>
    <string name="label_confirm_pre_sell_order">确认预购</string>
    <string name="label_take_out_currency_record">转出记录</string>
    <string name="label_take_out_record_detail">转出详情</string>
    <string name="label_take_out_select_friend">选择朋友</string>
    <string name="label_take_flow_record">流转记录</string>
    <string name="label_soft_setting">设置</string>
    <string name="label_person_information">个人资料</string>
    <string name="label_qr_and_command">我的二维码及微口令</string>
    <string name="label_change_delivery_address">收货地址</string>
    <string name="label_change_location">地区</string>
    <string name="label_change_nick_name">昵称</string>
    <string name="label_forget_password">找回密码</string>
    <string name="label_find_password">找回密码</string>
    <string name="label_reset_password">重置密码</string>
    <string name="label_change_sex">性别</string>
    <string name="label_edit_delivery_address">编辑收货地址</string>
    <string name="label_begin_certification">实名认证</string>
    <string name="label_upload_certification_photo">上传证件照片</string>
    <string name="label_show_certification_result">实名认证</string>
    <string name="label_edit_profession_card">设置名片</string>
    <string name="label_company_introduce">企业简介</string>
    <string name="label_message_settings">消息提醒设置</string>
    <string name="label_safety_protection">安全保护</string>
    <string name="label_change_password">修改登录密码</string>
    <string name="label_select_change_trans_password_type">选择验证方式</string>
    <string name="label_set_transaction_password">设置交易密码</string>
    <string name="label_login">登陆</string>
    <string name="label_register">注册</string>
    <string name="label_show_mobile">设置手机号</string>
    <string name="label_bind_mobile">绑定手机</string>
    <string name="label_change_mobile">修改手机号码</string>
    <string name="label_bind_email">绑定邮箱</string>
    <string name="label_show_email">设置邮箱</string>
    <string name="label_change_email">修改邮箱</string>
    <string name="label_help">帮助中心</string>
    <string name="label_feedback">意见反馈</string>
    <string name="label_question">问题描述</string>
    <string name="label_question_list">问题列表</string>
    <string name="label_about">关于</string>
    <string name="label_copyright_information">版权信息</string>
    <string name="label_service_agreement">微脉服务协议</string>
    <string name="label_privacy_declare">微脉隐私政策</string>
    <string name="label_privacy">隐私</string>
    <string name="label_news">消息</string>
    <string name="label_news_list">**消息</string>
    <string name="label_goods_collection">商品</string>
    <string name="label_foot_history">足迹</string>
    <string name="label_transaction_record">我的交易</string>
    <string name="label_transaction_detail">交易详情</string>
    <string name="label_order_form_record">我的订单</string>
    <string name="label_order_form_detail">订单详情</string>
    <string name="label_apply_for_refund">申请退款</string>
    <string name="label_select_refund_service">选择服务类型</string>
    <string name="label_ban_command">停用当前微口令</string>
    <string name="label_input_old_trans_password">密码校验</string>
    <string name="label_change_trans_password">重置交易密码</string>
    <string name="label_staff_service_change_trans">人工服务</string>
    <string name="label_input_phone_trans_password">身份校验</string>
    <string name="label_upload_picture_trans_pwd">上传证件</string>
    <string name="label_change_trans_result">消息通知</string>
    <string name="label_change_trans_success">设置结果</string>
    <string name="label_verity_id_when_change_trans">验证身份信息</string>
    <string name="action_message">我的消息</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friends">添加朋友</string>
    <string name="action_contacts">通信录</string>
    <string name="action_setting">设置</string>
    <string name="action_shopping_cart">购物车</string>
    <string name="action_pre_sell">新品预售</string>
    <string name="action_classification">分类</string>
    <string name="action_more">更多</string>
    <string name="action_secret">隐私</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="action_close">关闭</string>
    <string name="action_service">客服</string>
    <string name="action_edit">编辑</string>
    <string name="action_search">搜索</string>
    <string name="action_submit">提交</string>
    <string name="action_finish">完成</string>
    <string name="drawer_layout_open">打开</string>
    <string name="drawer_layout_close">关闭</string>
    <string name="about_copy_right">Copyright © 2000–2017 ACChain \n All rights reserved.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="digits_number_dot">0123456789.</string>
    <string name="digits_number">0123456789.</string>
    <string name="digits_char_english">qazxswedcvfrtgbnhyujmkiolpQAZXSWEDCVFRTGBNHYUJMKIOLP</string>
    <string name="digits_text_password">qazxswedcvfrtgbnhyujmkiolpQAZXSWEDCVFRTGBNHYUJMKIOLP_0123456789</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_wallet">钱包</string>
    <string name="main_navigation_qr">扫码</string>
    <string name="main_navigation_friends">朋友</string>
    <string name="main_navigation_person">我的</string>
    <string name="item_wallet_pre_order_tv_label_buy_price">买入价格：</string>
    <string name="item_wallet_pre_order_tv_label_time">行权截止时间：</string>
    <string name="item_wallet_pre_order_tv_take_in">转入</string>
    <string name="item_wallet_pre_order_tv_take_out">转出</string>
    <string name="item_wallet_pre_order_tv_exercise">行权</string>
    <string name="item_wallet_pre_order_tv_record">流转记录</string>
    <string name="item_wallet_adopt_tv_detail">分红明细</string>
    <string name="item_wallet_adopt_tv_label_adopt_price">领养价格</string>
    <string name="item_wallet_adopt_tv_label_adopt_amount">领养数量</string>
    <string name="item_wallet_adopt_tv_label_dividend">领养期限</string>
    <string name="item_wallet_adopt_tv_label_time">行权截止时间：</string>
    <string name="item_wallet_adopt_tv_take_in">转入</string>
    <string name="item_wallet_adopt_take_out">转出</string>
    <string name="item_wallet_adopt_tv_exercise">行权（提货）</string>
    <string name="item_wallet_adopt_tv_reward">提现</string>
    <string name="item_wallet_adopt_tv_record">流转记录</string>
    <string name="panic_buying">抢购</string>
    <string name="pre_order">预售</string>
    <string name="adopt">领养</string>
    <string name="exercise">行权</string>
    <string name="search_good">搜索商品</string>
    <string name="nikeName">昵称</string>
    <string name="commodityCollection">商品收藏</string>
    <string name="ShopAttention">店铺关注</string>
    <string name="browerHistory">浏览足迹</string>
    <string name="HoldAssets">持有资产</string>
    <string name="all_Order">查看全部订单</string>
    <string name="waitPay">待付款</string>
    <string name="wait_fh">待发货</string>
    <string name="wait_sh">待收货</string>
    <string name="waitEvaluation">待评价</string>
    <string name="refund">退款/售后</string>
    <string name="fragment_wallet_tv_search">搜索资产</string>
    <string name="share_circle">分享圈</string>
    <string name="carte">名片库</string>
    <string name="contract">通讯录</string>
    <string name="friend">朋友</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="activity_login_new_register">新用户注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="nikename_email_phone">邮箱/手机号</string>
    <string name="please_input_email_phone">请输入邮箱或手机号</string>
    <string name="register">注册</string>
    <string name="please_input_login_pwd">请输入登录密码</string>
    <string name="please_picture_code">请输入图形验证码</string>
    <string name="activity_login_please_input_code">请输入验证码</string>
    <string name="please_input_confirm_login_pwd">请确认登录密码</string>
    <string name="activity_edit_profession_card_label_company">企业名称</string>
    <string name="activity_edit_profession_card_hint_company">请输入企业名称</string>
    <string name="activity_edit_profession_card_label_business">主营业务</string>
    <string name="activity_edit_profession_card_hint_business">请输入主营业务</string>
    <string name="activity_edit_profession_card_label_duty">职务</string>
    <string name="activity_edit_profession_card_hint_duty">请输入职务</string>
    <string name="activity_edit_profession_card_label_phone">手机号</string>
    <string name="activity_edit_profession_card_label_email">邮箱</string>
    <string name="activity_edit_profession_card_hint_phone">请输入手机号</string>
    <string name="activity_edit_profession_card_hint_email">请输入邮箱</string>
    <string name="activity_edit_profession_card_label_address">地址</string>
    <string name="activity_edit_profession_card_hint_location">所在地区</string>
    <string name="activity_edit_profession_card_label_location">定位</string>
    <string name="activity_edit_profession_card_hint_location_detail">街道门牌等详细地址</string>
    <string name="activity_edit_profession_card_label_introduce">企业简介</string>
    <string name="activity_message_settings_message_alert">消息提醒</string>
    <string name="activity_message_settings_interactive">互动消息</string>
    <string name="activity_message_settings_receive_ask">接收语音和视频聊天邀请通知</string>
    <string name="activity_message_settings_notification_detail">通知显示消息详情</string>
    <string name="activity_message_settings_label_notifacation">关闭后，当收到朋友消息时，通知提示将不显示发信人和内容摘要。</string>
    <string name="activity_message_settings_remind_message">通知消息</string>
    <string name="activity_message_settings_logistic_message">物流消息</string>
    <string name="activity_message_settings_voice">声音</string>
    <string name="activity_message_settings_vibration">震动</string>
    <string name="activity_message_settings_label_voice_vibration">当微脉在运行时，你可以设置是否需要声音或者震动。</string>
    <string name="activity_select_refund_service_subtitle_refund">未收到货（包含未签收）</string>
    <string name="activity_select_refund_service_title_refund">仅退款</string>
    <string name="activity_select_refund_service_title_goods">退货退款</string>
    <string name="activity_select_refund_service_subtitle_goods">已收到货，需要退换已收到的货物</string>
    <string name="activity_input_phone_trans_password_label_info">此号码用于接收申请进度和结果通知</string>
    <string name="activity_input_phone_trans_password_label_phone">手机号</string>
    <string name="activity_input_phone_trans_password_hint_phone">请输入大陆手机号</string>
    <string name="activity_input_phone_trans_password_next">下一步</string>
</resources>