<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!---->
    <include layout="@layout/layout_top_bar"/>

    <!--商品展示-->
    <include layout="@layout/layout_goods_splash"/>

    <!--退款服务类型-->
    <com.acchain.community.view.MenuTitleSubTitleView
        android:id="@+id/mtstv_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding_margin_12dp"
        android:background="@color/white_background_5"
        android:paddingEnd="@dimen/view_padding_margin_16dp"
        android:paddingStart="@dimen/view_padding_margin_16dp"
        app:MenuTitleSubTitleView_icon="@drawable/icon_refund"
        app:MenuTitleSubTitleView_navigation="@drawable/icon_arrow_right_gray"
        app:MenuTitleSubTitleView_subtitle="@string/activity_select_refund_service_subtitle_refund"
        app:MenuTitleSubTitleView_title="@string/activity_select_refund_service_title_refund"/>

    <com.acchain.community.view.MenuTitleSubTitleView
        android:id="@+id/mtstv_refund_with_goods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background_5"
        android:paddingEnd="@dimen/view_padding_margin_16dp"
        android:paddingStart="@dimen/view_padding_margin_16dp"
        app:MenuTitleSubTitleView_icon="@drawable/icon_refund"
        app:MenuTitleSubTitleView_navigation="@drawable/icon_arrow_right_gray"
        app:MenuTitleSubTitleView_subtitle="@string/activity_select_refund_service_subtitle_goods"
        app:MenuTitleSubTitleView_title="@string/activity_select_refund_service_title_goods"/>
</LinearLayout>