<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!---->
    <include layout="@layout/layout_top_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--企业名称-->
            <TextView
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/view_height_40dp"
                android:text="@string/activity_edit_profession_card_label_company"
                android:textSize="@dimen/text_size_13sp"/>

            <EditText
                android:id="@+id/et_company_name"
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_5"
                android:hint="@string/activity_edit_profession_card_hint_company"
                android:textColor="@color/white_no_selected_40"
                android:textColorHint="@color/white_text_alpha_20"
                android:textSize="@dimen/text_size_13sp"/>

            <!--主营业务-->
            <TextView
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/view_height_40dp"
                android:text="@string/activity_edit_profession_card_label_business"
                android:textColor="@color/white_no_selected_40"
                android:textSize="@dimen/text_size_13sp"/>

            <EditText
                android:id="@+id/et_business"
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_5"
                android:gravity="start|top"
                android:hint="@string/activity_edit_profession_card_hint_business"
                android:lineSpacingMultiplier="1.5"
                android:minLines="3"
                android:textColorHint="@color/white_text_alpha_20"
                android:textSize="@dimen/text_size_13sp"/>

            <!--职务-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_padding_margin_12dp"
                android:background="@color/white_background_5"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/white_text_alpha_80"
                    style="@style/TextViewStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_profession_card_label_duty"
                    android:textSize="@dimen/text_size_title_15sp"/>

                <EditText
                    android:id="@+id/et_duty"
                    style="@style/TextViewStandard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="end|center_vertical"
                    android:hint="@string/activity_edit_profession_card_hint_duty"
                    android:textColorHint="@color/white_text_alpha_20"
                    android:textSize="@dimen/text_size_normal_14sp"/>
            </LinearLayout>

            <com.acchain.community.view.DividerView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_width_1px"
                android:background="@color/white_background_5"
                android:paddingEnd="@dimen/view_padding_margin_16dp"
                android:paddingStart="@dimen/view_padding_margin_16dp"/>

            <!--手机号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_5"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/white_text_alpha_80"
                    style="@style/TextViewStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_profession_card_label_phone"
                    android:textSize="@dimen/text_size_title_15sp"/>

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/TextViewStandard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:background="@color/transparent"
                    android:gravity="end|center_vertical"
                    android:hint="@string/activity_edit_profession_card_hint_phone"
                    android:textColorHint="@color/white_text_alpha_20"
                    android:textSize="@dimen/text_size_normal_14sp"/>
            </LinearLayout>

            <com.acchain.community.view.DividerView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_width_1px"
                android:background="@color/white_background_5"
                android:paddingEnd="@dimen/view_padding_margin_16dp"
                android:paddingStart="@dimen/view_padding_margin_16dp"/>

            <!--邮箱-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStandard"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white_text_alpha_80"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_edit_profession_card_label_email"
                    android:textSize="@dimen/text_size_title_15sp"/>

                <EditText
                    android:id="@+id/et_email"
                    style="@style/TextViewStandard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="end|center_vertical"
                    android:hint="@string/activity_edit_profession_card_hint_email"
                    android:textColorHint="@color/white_text_alpha_20"
                    android:textSize="@dimen/text_size_normal_14sp"/>
            </LinearLayout>

            <!--地址-->
            <TextView
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/view_height_40dp"
                android:text="@string/activity_edit_profession_card_label_address"
                android:textColor="@color/white_no_selected_40"
                android:textSize="@dimen/text_size_13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_background_5"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_location"
                    style="@style/TextViewStandard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="start|center_vertical"
                    android:hint="@string/activity_edit_profession_card_hint_location"
                    android:textColorHint="@color/white_text_alpha_20"
                    android:textSize="@dimen/text_size_normal_14sp"/>

                <TextView
                    style="@style/TextViewStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_address_location"
                    android:drawablePadding="@dimen/view_padding_margin_12dp"
                    android:text="@string/activity_edit_profession_card_label_location"
                    android:textSize="@dimen/text_size_normal_14sp"/>
            </LinearLayout>

            <com.acchain.community.view.DividerView
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_line_width_1px"
                android:background="@color/white_background_5"
                android:paddingEnd="@dimen/view_padding_margin_16dp"
                android:paddingStart="@dimen/view_padding_margin_16dp"/>

            <EditText
                android:id="@+id/et_location_detail"
                style="@style/TextViewStandard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white_background_5"
                android:gravity="start|center_vertical"
                android:hint="@string/activity_edit_profession_card_hint_location_detail"
                android:textColorHint="@color/white_text_alpha_20"
                android:textSize="@dimen/text_size_normal_14sp"/>


            <!--企业简介-->
            <com.acchain.community.view.LineMenuView
                android:id="@+id/lmv_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_padding_margin_16dp"
                android:layout_marginTop="@dimen/view_padding_margin_12dp"
                android:background="@color/white_background_5"
                android:paddingEnd="@dimen/view_padding_margin_16dp"
                android:paddingStart="@dimen/view_padding_margin_16dp"
                app:LineMenuView_menu="@string/activity_edit_profession_card_label_introduce"
                app:LineMenuView_menu_text_size="@dimen/text_size_title_15sp"
                app:LineMenuView_navigation="@drawable/icon_arrow_right_gray"
                app:LineMenuView_plugin="text"
                app:LineMenuView_menu_text_color="@color/white_text_alpha_80"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                tools:LineMenuView_brief=""/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>