<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!---->
    <include layout="@layout/layout_top_bar"/>

    <!---->
    <TextView
        android:id="@+id/tv_label"
        style="@style/TextViewStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white_no_selected_40"
        android:textSize="@dimen/text_size_small_12sp"
        android:text="@string/activity_input_phone_trans_password_label_info"/>

    <!--输入手机号-->
    <LinearLayout
        style="@style/TextViewStandard"
        android:background="@color/white_background_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_input_phone_trans_password_label_phone"
            android:textColor="@color/white_text_alpha_80"
            android:textSize="@dimen/text_size_title_15sp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/activity_input_phone_trans_password_hint_phone"
            android:inputType="number"
            android:paddingEnd="@dimen/view_padding_margin_16dp"
            android:paddingStart="@dimen/view_padding_margin_32dp"
            android:textColorHint="@color/white_text_alpha_20"
            android:textSize="@dimen/text_size_title_15sp"/>
    </LinearLayout>

    <!--按钮-->
    <Button
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_padding_margin_42dp"
        android:background="@drawable/btn_bg"
        android:text="@string/activity_input_phone_trans_password_next"
        android:textSize="@dimen/text_size_17sp"/>
</LinearLayout>